tests/paczka1/fuzzy1/65831626.err
Error in line 8: FwHDjWqIWrJ S418 60,15
Error in line 3: FwHDjWqIWrJ A486 62,1
Error in line 12: A486 A684 13,8
Error in line 11: xAS A878 80,6
Error in line 20: xAS S418 -2,5
Error in line 23: A486 A878 86,9
Error in line 24: zhvxe7msz A684 45,4
Error in line 32: n0xx A486 782
Error in line 28: A486 S418 99,5
Error in line 9: FwHDjWqIWrJ S418 65,9
